Update SelectionContext.java